--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
-    <title>Intro to Responsive design</title>
+	<meta name="viewport" content="initial-scale=1.0, width=device-wideth">
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/main.css">
+	<title>Intro to Responsive Design</title>
 </head>
 <body>
-    <main>
-        <h1>Using media queries with responsive design</h1>
+	<main>
+		<h1>Using media queries with responsive design</h1>
 
-        <div class="box1"></div>
-        <div class="box2"></div>
-    </main>
+		<p class="description">
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste odio labore quod a consectetur, porro in fugit sit cum, exercitationem impedit vel non totam modi inventore ut numquam voluptatibus rerum.
+		</p>
+
+		<div class="box1"></div>
+
+		<div class="box2"></div>
+
+		<div class="image-container">
+			<!--<img src="images/oh-my-girl.jpg" alt="ohmygirl">-->
+			<picture>
+				<source srcset="images/oh-my-girl2.jpg" media="(max-width: 375px)">
+				<img src="images/oh-my-girl.jpg" alt="ohmygirl">	
+			</picture>
+		</div>
+	</main>
+	<script src="js/main.js"></script>
 </body>
 </html>
